force-app/main/default/objects/leaseworks__Cost_Center__c/fields/leaseworks__Bank_Routing_Number_For_MR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Routing_Number_For_MR__c</fullName>
    <label>Bank Routing Number For MR</label>
    <length>18</length>
    <type>Text</type>
</CustomField>