force-app/main/default/objects/leaseworks__Cost_Center__c/fields/leaseworks__IBAN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IBAN__c</fullName>
    <label>IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>