force-app/main/default/objects/leaseworks__Cost_Center__c/fields/leaseworks__Lesor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lesor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lessor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cost Centers</relationshipLabel>
    <relationshipName>Cost_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>