force-app/main/default/objects/leaseworks__Cost_Center__c/fields/leaseworks__Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP Operator</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Cost Centers</relationshipLabel>
    <relationshipName>Cost_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>